First commited as before_58344_rev1