@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2014 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,7 +7,7 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 400714, 441267, 441184, 445723, 445724, 472654
+ *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 400714, 441267, 441184, 445723, 445724
  *******************************************************************************/
 
 package org.eclipse.ui.internal;
@@ -17,7 +17,6 @@ import java.io.OutputStream;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Locale;
 import org.eclipse.core.runtime.CoreException;
@@ -155,7 +154,7 @@ public class WorkbenchPlugin extends AbstractUIPlugin {
     private BundleContext bundleContext;
 
     // The set of currently starting bundles
-	private Collection<Bundle> startingBundles = new HashSet<>();
+	private Collection<Bundle> startingBundles = new HashSet<Bundle>();
 
     /**
      * Global workbench ui plugin flag. Only workbench implementation is allowed to use this flag
@@ -759,13 +758,12 @@ public class WorkbenchPlugin extends AbstractUIPlugin {
 
         //1FTUHE0: ITPCORE:ALL - API - Status & logging - loss of semantic info
 
-		// Combine message and status into a MultiStatus to avoid losing
-		// context, but avoid creating the MultiStatus unnecessarily if message
-		// is the same
-		if (message != null && !message.equals(status.getMessage())) {
-			status = StatusUtil.newStatus(Collections.singletonList(status), message, null);
+        if (message != null) {
+            getDefault().getLog().log(
+                    StatusUtil.newStatus(IStatus.ERROR, message, null));
         }
-		getDefault().getLog().log(status);
+
+        getDefault().getLog().log(status);
     }
 
     /**
@@ -917,7 +915,7 @@ public class WorkbenchPlugin extends AbstractUIPlugin {
 			// and premature attempt to resolve class reference
 			boolean isBidi = com.ibm.icu.text.Bidi.requiresBidi(message.toCharArray(), 0,
 					message.length());
-			return Boolean.valueOf(isBidi);
+			return new Boolean(isBidi);
 		} catch (NoClassDefFoundError e) {
 			// the ICU Base bundle used in place of ICU?
 			return null;
